--- a/config.yml
+++ b/config.yml
@@ -45,16 +45,16 @@ PATHS:
     #- "node_modules/foundation-sites/js/foundation.dropdownMenu.js"
     #- "node_modules/foundation-sites/js/foundation.equalizer.js"
    # - "node_modules/foundation-sites/js/foundation.interchange.js"
-    - "node_modules/foundation-sites/js/foundation.magellan.js"
+   # - "node_modules/foundation-sites/js/foundation.magellan.js"
    # - "node_modules/foundation-sites/js/foundation.offcanvas.js"
    # - "node_modules/foundation-sites/js/foundation.orbit.js"
     #- "node_modules/foundation-sites/js/foundation.responsiveMenu.js"
     - "node_modules/foundation-sites/js/foundation.responsiveToggle.js"
     #- "node_modules/foundation-sites/js/foundation.reveal.js"
    # - "node_modules/foundation-sites/js/foundation.slider.js"
-    - "node_modules/foundation-sites/js/foundation.sticky.js"
+   # - "node_modules/foundation-sites/js/foundation.sticky.js"
    # - "node_modules/foundation-sites/js/foundation.tabs.js"
-    - "node_modules/foundation-sites/js/foundation.toggler.js"
+   # - "node_modules/foundation-sites/js/foundation.toggler.js"
    # - "node_modules/foundation-sites/js/foundation.tooltip.js"
    #- "node_modules/foundation-sites/js/foundation.zf.responsiveAccordionTabs.js"
     # Paths to your own project code are here
